manifest/phoenix-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phoenix-app
  labels:
    app: phoenix-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: phoenix-app
  template:
    metadata:
      labels:
        app: phoenix-app
    spec:
      containers:
        - name: phoenix-container
          image: ghcr.io/danielbutlerismyname/portfoliov4:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: phoenix-service
spec:
  selector:
    app: phoenix-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  type: ClusterIP
