manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phoenix-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 37.156.41.23
      secretName: phoenix-tls
  rules:
    - host: 37.156.41.23
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phoenix-service
                port:
                  number: 80
